@@ -2,6 +2,7 @@
  - Add test for 'data_init' accessor.
  - Add test for running with init() method without 'data_init' accessor.
  - Fix running with init() method without 'data_init' accessor.
+ - Update to new Plack::Component::Tags::HTML.
 
 0.09 2022-11-03T21:36:40+01:00
  - API change: Add 'data_init' accessor.
